# PufferLib

./: .gitignore  MANIFEST.in  README.md  ablate.py  breakout_gpt_prompt_all_code.py  build_ocean.sh  c_advantage.cu  c_advantage.pyx  c_gae.c  c_gae.html  c_gae.pyx  checkpoint_dict.txt  clean_pufferl.py  config  config.py  config.yaml  config_jsuarez.yaml  copy_file.py  correlate.py  cv_test.py  demo.py  download_wandb.py  eval.py  evaluate_elos.py  gpudrive_test.c  gpudrive_test.h  log_file_aggregator.py  log_gen.sh  mountains  pokemon_red.gb.sym  pokemon_red_eval.py  pufferlib.cpp  pufferlib.cu  pyproject.toml  resources  run.py  run.sh  run_baselines.sh  run_boey_baseline.py  run_multi.sh  (+16 more)
.github/workflows/: install.yml
config/: craftax.ini  default.ini  higher_lower.ini  kinetix.ini  metta.ini  nmmo3.ini  trade_sim.ini
config/atari/: enduro_cy.ini
config/ocean/: blastar.ini  boids.ini  breakout.ini  cartpole.ini  connect4.ini  continuous.ini  cpr.ini  enduro.ini  enduro_clone.ini  enduro_cy.ini  go.ini  gpudrive.ini  grid.ini  impulse_wars.ini  memory_cy.ini  moba.ini  my_enduro_clone.ini  nmmo3.ini  ocean.ini  pong.ini  puffer_enduro.ini  pysquared.ini  racing.ini  rware.ini  sanity.ini  snake.ini  spaces_cy.ini  squared.ini  tactical.ini  tower_climb.ini  trash_pickup.ini  tripletriad.ini
config/ocean_build/: default.ini  enduro_clone.ini  ocean_build.ini
examples/: puffer_vec_ppo_trash_pickup.py
examples/trash_pickup_saves/: trash_pickup_model_iter_13338.pt  trash_pickup_model_iter_13348.pt  trash_pickup_model_iter_13358.pt
experiments/: test_exp.txt  test_log.txt
experiments/bill_test_1/: elo.db
experiments/my_enduro_clone-e34ae933/: model_000050.pt  trainer_state.pt
experiments/puffer_enduro-abdb4e45/: model_002800.pt  trainer_state.pt
pufferlib/: __init__.py  clean_pufferl.py  cleanrl.py  cleanrl_ppo_atari.py  emulation.py  env_binding.h  environment.py  extensions.c  extensions.html  models.py  multi_env.py  namespace.py  policy_pool.py  pufferlib.cu  pufferlib.py  puffernet.c  puffernet.h  puffernet.pyx  pytorch.py  shared.cpp  spaces.py  squared_bind.c  sweep.py  utils.py  vector.py  vectorization.py  wrappers.py
pufferlib/config/: atari.ini  craftax.ini  default.ini  minigrid.ini  minihack.ini  nethack.ini  procgen.ini  trade_sim.ini
pufferlib/config/ocean/: cpr.ini  (+20 more)
pufferlib/extensions/: pufferlib.cpp  puffernet.c
pufferlib/frameworks/: cleanrl.py
pufferlib/ocean/: __init__.py  c_grid.c  env_binding.h  environment.py  sanity.py  torch.py
pufferlib/ocean/impulse_wars/: .clang-format  CMakeLists.txt  Makefile  cy_impulse_wars.pyx  impulse_wars.py  pyproject.toml
pufferlib/ocean/impulse_wars/cmake/: fix-cython-pxd.cmake
pufferlib/ocean/impulse_wars/src/: benchmark.c  demo.c  env.h  game.h  helpers.h  map.h  render.h  scripted_agent.h  settings.h  types.h
pufferlib/ocean/impulse_wars/src/include/: cc_array.h  dlmalloc.h  rlights.h
resources/nmmo3/: map_shader_100.fs  map_shader_330.fs
scripts/: build_ocean.sh  build_simple.sh  sweep_atari.sh  train_atari.sh  train_ocean.sh  train_procgen.sh  train_sanity.sh
tests/: test.py  test_c_advantage.cu  test_cleanrl_utils.py  test_env_binding.py  test_newbind.py  test_performance.py  test_puffernet.py  test_sweep.py
wandb/: latest-run  wandb-resume.json
wandb/run-20240529_050722-fiqsixl9/: run-fiqsixl9.wandb
wandb/run-20240529_050920-i9tddq4l/: run-i9tddq4l.wandb
wandb/run-20240529_051105-wpn89gmb/: run-wpn89gmb.wandb
wandb/run-20240529_051220-kggmbrww/: run-kggmbrww.wandb
wandb/run-20240529_052018-6emahxs3/: run-6emahxs3.wandb
wandb/run-20240529_052524-0z6n6a5l/: run-0z6n6a5l.wandb
wandb/run-20240529_052701-kqkkgolb/: run-kqkkgolb.wandb
wandb/run-20240529_052729-63qcs4kv/: run-63qcs4kv.wandb
wandb/run-20240529_052833-wwik5icr/: run-wwik5icr.wandb
wandb/run-20240529_053723-h2cmssyy/: run-h2cmssyy.wandb
wandb/run-20240529_053930-so6uqpm7/: run-so6uqpm7.wandb
wandb/run-20240529_054206-cdbcdsa6/: run-cdbcdsa6.wandb
wandb/run-20240529_060414-iwa29jop/: run-iwa29jop.wandb
wandb/run-20240529_060705-80f0gixu/: run-80f0gixu.wandb
wandb/run-20240529_060754-wo454p6b/: run-wo454p6b.wandb
wandb/run-20240529_060826-rrzdhvsf/: run-rrzdhvsf.wandb
wandb/run-20240529_060915-2oby2fvp/: run-2oby2fvp.wandb
wandb/run-20240529_061009-botoics4/: run-botoics4.wandb
wandb/run-20240529_061146-7lkvvj0v/: run-7lkvvj0v.wandb
wandb/run-20240529_061353-kijq9h4b/: run-kijq9h4b.wandb
wandb/run-20240529_061647-2fitgwa2/: run-2fitgwa2.wandb
wandb/run-20240529_061823-47bk7f0b/: run-47bk7f0b.wandb
wandb/run-20240529_062536-tzugzxpe/: run-tzugzxpe.wandb
wandb/run-20240529_063947-3xi7reyi/: run-3xi7reyi.wandb
wandb/run-20240529_064116-y4o8acs3/: run-y4o8acs3.wandb
wandb/run-20240529_064246-95nyrgf9/: run-95nyrgf9.wandb
wandb/run-20240529_065917-h6efjl78/: run-h6efjl78.wandb
wandb/run-20240529_070609-azfwnt70/: run-azfwnt70.wandb
wandb/run-20240529_071058-s6i6ktqt/: run-s6i6ktqt.wandb
wandb/run-20240529_071123-k1nz750x/: run-k1nz750x.wandb
wandb/run-20240529_071342-1tpj7nne/: run-1tpj7nne.wandb
wandb/run-20240529_071425-jfpem8qc/: run-jfpem8qc.wandb
wandb/run-20240529_071454-a1zsuron/: run-a1zsuron.wandb
wandb/run-20240529_071516-n1618rps/: run-n1618rps.wandb
wandb/run-20240529_071618-9grp7hpv/: run-9grp7hpv.wandb
wandb/run-20240529_071802-swcbq6b4/: run-swcbq6b4.wandb
wandb/run-20240529_072020-egx93shy/: run-egx93shy.wandb
wandb/run-20240529_072939-e50xk3fo/: run-e50xk3fo.wandb
wandb/run-20240529_073040-zhgte7qd/: run-zhgte7qd.wandb
wandb/run-20240529_073317-kzv31j1x/: run-kzv31j1x.wandb
wandb/run-20240529_073530-r09q2jjo/: run-r09q2jjo.wandb
wandb/run-20240529_074112-m927cjfx/: run-m927cjfx.wandb
wandb/run-20240529_074256-si02bnly/: run-si02bnly.wandb
wandb/run-20240529_074451-nzdcr35q/: run-nzdcr35q.wandb
wandb/run-20240529_074519-6bxh2mgg/: run-6bxh2mgg.wandb
wandb/run-20240529_074829-nin921fq/: run-nin921fq.wandb
wandb/run-20240529_075121-2jz5n5hu/: run-2jz5n5hu.wandb
wandb/run-20240529_075213-7dhiuvhs/: run-7dhiuvhs.wandb
(+460 files in other folders)
